libxsd-frontend: fixed crash when increasing pointer that is already pointing to the end
fixed copyright notice for xsd
fixed inlcudes for xsd

--- a/xsd/all/conandata.yml
+++ b/xsd/all/conandata.yml
@@ -1,6 +1,6 @@
 sources:
   "4.2.0":
-    git_url: "git://git.codesynthesis.com/xsd/xsd.git"
+    git_url: "https://git.codesynthesis.com/xsd/xsd.git"
     git_tag: "v4.2.0"
 patches:
   "4.2.0":
