--- a/libxsd-frontend/all/conandata.yml
+++ b/libxsd-frontend/all/conandata.yml
@@ -5,3 +5,4 @@ sources:
 patches:
   "2.1.0":
     - patch_file: "patches/0001-templating.patch"
+    - patch_file: "patches/0002-fix-increasing-end-ptrs.patch"
